Fix navigation styling with dedicated CSS file

--- a/docs/_includes/head_custom.html
+++ b/docs/_includes/head_custom.html
@@ -2,3 +2,5 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+<!-- Custom Navigation CSS -->
+<link rel="stylesheet" href="{{ '/assets/css/custom-nav.css' | relative_url }}">
