--- a/docs/_sass/color_schemes/dark.scss
+++ b/docs/_sass/color_schemes/dark.scss
@@ -1,18 +1,34 @@
+// Dokapon SoF Dark Theme - Modern Gaming Documentation
 $color-scheme: dark;
-$body-background-color: $grey-dk-300;
-$body-heading-color: $grey-lt-000;
-$body-text-color: $grey-lt-300;
-$link-color: $blue-000;
-$nav-child-link-color: $grey-dk-000;
-$sidebar-color: $grey-dk-300;
-$base-button-color: $grey-dk-250;
-$btn-primary-color: $blue-200;
-$code-background-color: #31343f; // OneDarkJekyll default for syntax-one-dark-vivid
-$code-linenumber-color: #dee2f7; // OneDarkJekyll .nf for syntax-one-dark-vivid
-$feedback-color: darken($sidebar-color, 3%);
-$table-background-color: $grey-dk-250;
-$search-background-color: $grey-dk-250;
-$search-result-preview-color: $grey-dk-000;
-$border-color: $grey-dk-200;
 
-@import "./vendor/OneDarkJekyll/syntax"; // this is the one-dark-vivid atom syntax theme
+// Core background colors - GitHub-inspired dark
+$body-background-color: #0d1117;
+$sidebar-color: #161b22;
+$table-background-color: #161b22;
+$search-background-color: #21262d;
+
+// Text colors
+$body-heading-color: #e6edf3;
+$body-text-color: #8b949e;
+
+// Accent colors - Vibrant gaming theme
+$link-color: #4ecdc4;
+$nav-child-link-color: #8b949e;
+$feedback-color: #21262d;
+
+// Button colors
+$base-button-color: #21262d;
+$btn-primary-color: #ff6b6b;
+
+// Code styling - One Dark inspired
+$code-background-color: #161b22;
+$code-linenumber-color: #6e7681;
+
+// Border colors
+$border-color: #30363d;
+
+// Search
+$search-result-preview-color: #6e7681;
+
+// Import syntax highlighting
+@import "./vendor/OneDarkJekyll/syntax";
